Made a temporary fix on mobile display

--- a/style.css
+++ b/style.css
@@ -238,4 +238,14 @@ body {
         align-self: center;
         margin: 0;
     }
+
+    @media(max-width: 450px) {
+        #about {
+            display: none;
+        }
+
+        #blogs {
+            display: none;
+        }
+    }
 }
